# r2r-backend

./: .env  .gitignore  main.py  models.py  pyproject.toml  services.py  tree.txt
alembic/: env.py
alembic/versions/: 246677e8a89f_add_means_and_variances_to_profile_.py  f44c8b1fa365_initial_schema_with_profiles_and_ratings.py
app/: main.py
data/profiles/: road_01.json  road_01_prior_01.yaml
db/: models.py
routers/: routes.py
scripts/: add_custom_profile.py  add_prior_config.py  test_connection.py  transfer_priors_to_learned_params.py
src/r2r_backend/app/: dependencies.py  main.py
src/r2r_backend/db/: base.py  models.py
src/r2r_backend/routers/: routes.py
